--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -3,8 +3,8 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 .profiler-results.profiler-left.profiler-top.profiler-no-controls {
-    opacity: .5 !important;
-    transition: opacity .12s ease;
+    opacity: .4 !important;
+    transition: opacity .2s ease-in-out;
 }
 
 .profiler-results.profiler-left.profiler-top.profiler-no-controls:hover {
