--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -5,6 +5,7 @@
 .profiler-results.profiler-left.profiler-top.profiler-no-controls {
     opacity: .4 !important;
     transition: opacity .2s ease-in-out;
+    display: none !important;
 }
 
 .profiler-results.profiler-left.profiler-top.profiler-no-controls:hover {
